[package]
name = "verdict"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A formally-verified X.509 certificate validator"
homepage = "https://github.com/secure-foundations/verdict"
repository = "https://github.com/secure-foundations/verdict"
readme = "README.md"

[dependencies]
builtin_macros = { path = "../deps/verus/source/builtin_macros" }
builtin = { path = "../deps/verus/source/builtin" }
vstd = { path = "../deps/verus/source/vstd" }
vest = { path = "../deps/vest" }
libcrux = { path = "../deps/libcrux" }
libcrux-hacl = { path = "../deps/libcrux/sys/hacl" }
chrono = "0.4.38"
aws-lc-rs = "1.10.0"
verdict-polyfill = { path = "../verdict-polyfill" }
verdict-macros = { path = "../verdict-macros" }
verdict-parser = { path = "../verdict-parser" }
verdict-rspec = { path = "../verdict-rspec" }
verdict-rspec-lib = { path = "../verdict-rspec-lib" }
thiserror = "2.0.12"
ref-cast = "1.0.24"

[features]
default = []
aws-lc = []
trace = ["verdict-parser/trace"]

[package.metadata.verus]
verify = true

[lints]
workspace = true
